[package]
name = "site_management"
version = "0.1.0"
authors = ["Jorn van Wier <jornvanwier@gmail.com>"]

[dependencies]
diesel = { version = "0.12.*", features = ["postgres"] }
diesel_codegen = { version = "0.12.*", features = ["postgres"] }
dotenv = "0.8.0"
argon2rs = "0.2.5"
rocket = "*"
rocket_codegen = "*"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
rand = "0.3"
r2d2 = "0.7.0"
r2d2-diesel = "0.12.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]

[lib]
name = "site_management"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/bin/main.rs"
