[package]
name = "site_management"
version = "0.1.0"
authors = ["Jorn van Wier <jornvanwier@gmail.com>"]

[dependencies]
diesel = { version = "0.13.*", features = ["postgres"] }
diesel_codegen = { version = "0.13.*", features = ["postgres"] }
dotenv = "0.8.0"
argon2rs = "0.2.5"
rocket = "0.3.*"
rocket_codegen = "0.3.*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.3"
r2d2 = "0.7.0"
r2d2-diesel = "0.13.*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]

[lib]
name = "site_management"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/bin/main.rs"
